--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <title>ChatGPT</title>
-    <link rel="icon" href="icon.png">
+    <title>baby kids</title>
+    <link rel="icon" href="icon.webp">
   </head>
   <body>
       hello world
