--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <title>baby kids</title>
-    <link rel="icon" href="icon stray kids.png">
+    <link rel="icon" href="babymonster..JEPG">
   </head>
   <body>
       hello world
