Fix link tags in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <title>baby kids</title>
-    <link rel="picture" href="babymonster..JEPG">
+    <link rel="icon" href="icon stray kids .JEPG">
   </head>
   <body>
       hello world
