--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <title>baby kids</title>
-    <link rel="icon" href="icon stray kids .JEPG">
+    <link rel="icon" href="icon stray kids .png">
   </head>
   <body>
       hello world
